checkbox (0.16) UNRELEASED; urgency=low

  [ Brendan Donegan ]
  * Add hidden 'Submit to HEXR' checkbox on submission screen, so that it can
    be utilised in checkbox-certification.

  [ Po-Hsu Lin]
  * jobs/led.txt.in: Modified the description of led/power-blink-suspend test to
    cover more cases.
    jobs/suspend.txt.in: Modified the description of suspend/suspend_advanced
    test cover more cases. (LP: #1172108)

  [ Jeff Lane ]
  * scripts/sleep_test_log_check: added new script to parse fwts logs for
    errors
    jobs/hibernate.txt.in, jobs/stress.txt.in, jobs/suspend.txt.in: added jobs
    to use the sleep_test_log_check script after s3/s4 tests. Modified current
    s3/s4 tests to use the new None fail level for fwts_test
    scripts/fwts_test: no longer fails on fwts errors if "-f none" is chosen.
    Now it should only fail by manual indication if the actual sleep action
    fails. (LP: #1169922)
  * scripts/bluetooth_test: test no longer generates odd Broken Pipe error when
    the dpkg bit verifies obexftp is installed (LP: #1169488)
  * jobs/networking.txt.in: fixed networking/info jobs that were not being run
    because $output was being resolved too early (LP: #1065983)

  [ Daniel Manrique ]
  * scripts/alsa_record_playback: Replaced alsasrc with autoaudiosrc
    (LP: #1059544)

  [ Jeff Marcom ]
  * scripts/network: added new script for testing and retrieving information for
    network interfaces.
  * configs,examples/network.cfg: added config file 
    for network test configuration and setup

 -- Jeff Marcom <jeffmarcom@ubuntu.com>  Wed, 24 Apr 2013 13:35:39 -0400

checkbox (0.15.8) raring; urgency=low

  * jobs/monitor.txt.in: Modified the description of dim_brightness test to make 
    it consistent with the code. (LP: #1170244)

  [ Jeff Lane] 
  * jobs/miscellanea.txt.in: Added jobs for manual verification of PXE boot and
    remote IPMI to improve server test coverage.